correct postion on tablet hero image

--- a/starter-code/style.css
+++ b/starter-code/style.css
@@ -10,6 +10,7 @@
     box-sizing: border-box;
 }
 
+
 button {
     font-size: 1rem;
     line-height: 1.75rem;
@@ -17,10 +18,6 @@ button {
     border-radius: 1.5rem;
     border: none;
     font-weight: 700;
-}
-
-body {
-    width: 100%;
 }
 
 /* HEADER */
@@ -202,6 +199,20 @@ footer button {
 @media (min-width: 700px) {
 
 
+    html, body {
+        max-width: 100%;
+        overflow-x: hidden;
+        position: relative;
+    }
+
+    main {
+        overflow: hidden;
+    }
+
+    header {
+        padding: 1rem 39px 0 39px;
+    }
+    
     .intro__and__hero {
         display: flex;
         flex-direction: row;
@@ -213,17 +224,13 @@ footer button {
     }
 
     .intro {
-        
         margin: 99px 20rem 0 40px;;
     }
 
-    .hero {
-        
-        
+    .hero__tablet__container {
         position: absolute;
         right: -285px;
-        top: -140px;
-        overflow: hidden;
+        top: -80px;
     }
 
     .hero__image__tablet {
